2013-12-01      Gaius Mulley <gaius@gnu.org>

	* gcc-versionno/gcc/gm2/examples/pge/deviceGroff.mod:  (newFrame)
	  emit leading .ll 8i.
	* gcc-versionno/gcc/gm2/examples/pge/foo.mod:  (regenerated).
	* gcc-versionno/gcc/gm2/gm2-gcc/m2builtins.c:  (m2builtins_BuildBuiltinTree)
	  corrected formatting.
	* gcc-versionno/gcc/testsuite/gm2/pim/pass/builtin.def:  corrected sinf
	  to use and return SHORTREAL types.
	* gcc-versionno/gcc/testsuite/gm2/pim/pass/builtin.mod:  corrected sinf
	  to use and return SHORTREAL types.
	* gcc-versionno/gcc/testsuite/gm2/pim/pass/testsinf.mod:  corrected test
	  to use REAL rather than SHORTREAL with sinf.

2013-11-20      Gaius Mulley <gaius@gnu.org>

	* gcc-versionno/gcc/gm2/config-lang.in:  added target-libgm2
	  to the list of target_libs.
	* gcc-versionno/gcc/gm2/examples/pge/foo.fig:  new example.
	* gcc-versionno/gcc/gm2/examples/pge/foo.mod:  regenerated.
	* gcc-versionno/gcc/gm2/gm2-compiler/M2GenGCC.mod:  change
	  type to Address if lvalue is used, this fixes the
	  regression test failure in
	  gcc-versionno/gcc/testsuite/gm2/iso/run/pass/unbounded.mod.
	* gcc-versionno/gcc/gm2/gm2spec.c:  remove extern int force_no_linker.
	  Changed variable name force_no_linker to allow_linker and
	  switched boolean value.  allow_linker now exported via gcc.h.
	* gcc-versionno/gcc/gm2/patches/gcc/4.7.3/0[0-9]-patches:
	  regenerated.
	* gcc-versionno/gcc/gm2/patches/gcc/4.7.3/10-patches:
	  regenerated.

2013-11-15      Gaius Mulley <gaius@gnu.org>

	* gcc-versionno/gcc/gm2/gm2-libs-iso/LongWholeIO.mod:  (ReadInt)
	* gcc-versionno/gcc/gm2/gm2-libs-iso/ShortWholeIO.mod:  (ReadInt)
	* gcc-versionno/gcc/gm2/gm2-libs-iso/WholeIO.mod:  (ReadInt)
	  catch overflow and set the read result accordingly.
	* gcc-versionno/gcc/gm2/gm2-libs-iso/LongWholeIO.mod:  (ReadInt)
	* gcc-versionno/gcc/gm2/gm2-libs-iso/ShortWholeIO.mod:  (ReadInt)
	* gcc-versionno/gcc/gm2/gm2-libs-iso/WholeIO.mod:  (ReadInt)
	  reference SetReadResult correctly via IOChan.