@@ -57,12 +57,13 @@
 <div id="page">
   <div class="plain">
     <h2>The home of the GNU Modula-2 compiler</h2>
-    <p>Currently GNU Modula-2 can be grafted onto gcc-4.1.2.
+    <p>Currently GNU Modula-2 can be grafted onto gcc-4.1.2 and
+      gcc-4.7.3.  The gcc-4.1.2 graft is the more stable.
       <div>
 	<span style="display:inline-block; vertical-align:middle; margin-left: 3%">
 	  <img src="release.png" alt="users"</img></span>
 	       <span style="display:inline-block; vertical-align:middle">
-		 Latest release of gm2
+		 Stable release of gm2
 		 <a href="http://floppsie.comp.glam.ac.uk/download/c/gcc-4.1.2+gm2-1.0.4.tar.gz">gcc-4.1.2+gm2-1.0.4.tar.gz</a>.
 	       </span>
       </div>
@@ -71,8 +72,9 @@
 	<span style="display:inline-block; vertical-align:middle; margin-left: 3%">
 	  <img src="develop.png" alt="installing"</img></span>
 	       <span style="display:inline-block; vertical-align:middle">
-		 Current development snapshot
-		 <a href="http://floppsie.comp.glam.ac.uk/download/c/gcc-4.7.3+gm2-git-latest.tar.gz">gcc-4.7.3+gm2-git-latest.tar.gz</a>.
+		 Current development snapshots
+		 <a href="http://floppsie.comp.glam.ac.uk/download/c/gcc-4.1.2+gm2-git-latest.tar.gz">gcc-4.1.2+gm2-git-latest.tar.gz</a>
+		 and <a href="http://floppsie.comp.glam.ac.uk/download/c/gcc-4.7.3+gm2-git-latest.tar.gz">gcc-4.7.3+gm2-git-latest.tar.gz</a>.
 	</span>
       </div>
       <br>
