@@ -1,3 +1,12 @@
+2013-12-05      Gaius Mulley <gaius@gnu.org>
+
+	* gcc-versionno/gcc/gm2/gm2.texi:  added information on
+	  how to build a gcc-4.1.2 based gm2 under a multiarch
+	  linux system.
+	* gcc-versionno/gcc/gm2/gm2.texi:  changed configure
+	  examples to reflect new source tree layout.
+
+
 2013-12-01      Gaius Mulley <gaius@gnu.org>
 
 	* gcc-versionno/gcc/gm2/examples/pge/deviceGroff.mod:  (newFrame)
